--- a/tpfinalparte1/index.html
+++ b/tpfinalparte1/index.html
@@ -6,6 +6,7 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+  <script language="javascript" type="text/javascript" src="variables.js"></script>
   <script language="javascript" type="text/javascript" src="assets.js"></script>
   <script language="javascript" type="text/javascript" src="botones.js"></script>
   <script language="javascript" type="text/javascript" src="escenas.js"></script>
